# convobox

./: .gitattributes  .gitignore  .gitmessage.txt  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CREDITS.md  DEPENDENCY_LICENSE_AUDIT.md  LICENSE  OPENCODE_API_NOTES.md  README.md  SYNC-SCRIPT-AUTOPUSH-TEST-DELETE-ME.txt  TESTING.md  UAT-WORKSPACE-NOTES.md  bargein_suggestions.md  convobox.example.yaml  llms.txt  pyproject.toml  speechnormalization.md  uat_coverage_suggestions.md
.githooks/: pre-push
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: ai-attribution.yml  ci.yml
.tours/: 01-architecture-and-data-flow.tour  02-review-findings-security-performance.tour  03-extension-points-modularity.tour
docs/: AI-ATTRIBUTION.md  ARCHITECTURE.md  CONVERSATION-DESIGN-REFERENCES.md  DESIGN-0.3.0-interaction-and-safety.md  DESIGN-backend-questions.md  DESIGN-backend-sandboxing.md  DESIGN-barge-in.md  DESIGN-echo-and-barge-in.md  KNOWN-ISSUES.md  LESSONS-FROM-VOICE-OPENCODE.md  PRIOR-ART.md  QUICKSTART.md  ROADMAP.md  SECURITY.md  SETTINGS-TUI-SCOPE.md  STATUS.md  UAT-L3-contrast.md  UAT-checklist.md  UAT-claude-code-smoke.md  UAT-settings-tui.md  WEB-UI-ARCHITECTURE.md
docs/field-notes/: 2026-07-18-interactive-prompt-deadlock.md  2026-07-18-safeword-vad-coupling.md  2026-07-19-corrections-glossary-domain-improbable-sources.md  2026-07-20-aec-delay-hint-was-a-red-herring.md  2026-07-20-self-barge-in-was-backchannel-not-echo.md  2026-07-21-codex-approval-decision-schema-bug.md  2026-07-21-sherpa-onnx-dedicated-keyword-spotting-candidate.md  2026-07-22-cublas-dll-loading-needs-path-not-just-add-dll-directory.md  2026-07-22-mcp-tool-calls-have-a-separate-permission-gate.md  2026-07-22-native-allocator-leak-also-surfaces-as-numpy-memoryerror.md  2026-07-22-shared-venv-editable-install-cross-contamination.md  2026-07-23-approval-explain-clarify-help-outcome.md  LICENSE  README.md  TEMPLATE.md
scripts/: _console.py  acoustic_calibration.py  audio_devices.py  bootstrap_windows.ps1  ci_local.py  playback_smoketest.py  roundtrip_smoketest.py  run_convobox.py  settings_tui.py  spike.py  spike_smoketest.py  uat-l3-contrast.ps1  voice_picker.py  voice_picker_tui.py  voice_tui.py
src/convobox/: config.py  interrupt_presets.py
src/convobox/adapters/: __init__.py  base.py  claude_code.py  codex.py  opencode.py
src/convobox/approval/: __init__.py  detector.py  hook_script.py
src/convobox/audio/: __init__.py  _sounddevice.py  aec.py  capture.py  playback.py
src/convobox/confirmword/: __init__.py  detector.py
src/convobox/listening_pause/: __init__.py  detector.py
src/convobox/orchestrator/: __init__.py  orchestrator.py
src/convobox/response_tiering/: __init__.py  detector.py  tiering.py
src/convobox/resumeword/: __init__.py  detector.py
src/convobox/safeword/: __init__.py  detector.py
src/convobox/stt/: __init__.py  base.py  corrections.py  factory.py  language_tracker.py  transcriber.py
src/convobox/tts/: __init__.py  base.py  factory.py  kokoro.py  piper.py
src/convobox/tui/: __init__.py  render.py  state.py
src/convobox/vad/: __init__.py  segmenter.py
src/convobox/wakeword/: __init__.py  detector.py
tests/: fake_claude_cli.py  fake_codex_appserver.py  test_aec.py  test_approval.py  test_approval_explanation_rendering.py  test_approval_prompt_gate.py  test_audio.py  test_audio_devices.py  test_backend_working_dir.py  test_barge_in.py  test_claude_approval_hook_script.py  test_claude_code_adapter.py  test_claude_code_approval.py  test_codex_adapter.py  test_config.py  test_confirmword.py  test_continue_prompt_gate.py  test_conversation_tui.py  test_conversation_tui_keys.py  test_example_config.py  test_factories.py  test_interrupt_presets.py  test_language_tracker.py  test_listening_pause.py  test_opencode_adapter.py  test_orchestrator.py  test_permission_mode.py  test_recognition_error_ladder.py  test_response_tiering.py  test_response_tiering_state.py  test_resumeword.py  test_roundtrip_smoketest_cli.py  test_run_convobox_echo.py  test_safeword.py  test_settings_tui.py  test_spike_cli.py  test_startup_announcement.py  test_stt_factory.py  test_transcriber.py  test_transcript_corrections.py  (+7 more)
