[project]
name = "convobox"
version = "0.1.0"
description = "Local, backend-agnostic voice frontend for CLI coding agents"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "sounddevice>=0.4.7",
    "numpy>=1.26",
    "silero-vad>=5.1",
    "faster-whisper>=1.0",
    "piper-tts>=1.2",
    "httpx>=0.27",
    "httpx-sse>=0.4",
    "pydantic>=2.7",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.13",
]

[project.scripts]
convobox-spike = "scripts.spike:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/convobox"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
