[project]
name = "convobox"
version = "0.2.0"
description = "Local, backend-agnostic voice frontend for CLI coding agents"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "sounddevice>=0.4.7",
    "numpy>=1.26",
    "silero-vad>=5.1",
    "faster-whisper>=1.0",
    "kokoro-onnx>=0.4",
    "httpx>=0.27",
    "httpx-sse>=0.4",
    "pydantic>=2.7",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "mypy>=1.13",
    # Upper-bounded, unlike the others here: CI's lint job (LegionForge/
    # dev-rig's lint.yml) installs via `pip install -e ".[dev]"`, which does
    # NOT read this repo's uv.lock -- so an unbounded ruff dependency here
    # means the next ruff release can silently start enforcing new
    # default-on rules in CI while every local `uv run ruff` (pinned to
    # uv.lock's exact version) stays green and shows nothing wrong.
    # Live-confirmed 2026-07-24: 0.15.21 (uv.lock) -> 0.16.0 (latest on
    # PyPI at the time) added RUF022/G201/SIM102/PIE808/etc, breaking CI's
    # lint job on `main` while every local run passed. Re-verify against
    # the new version's diff before bumping this bound.
    "ruff>=0.15,<0.17",
    "bandit>=1.9",
]
# Acoustic echo cancellation (WebRTC APM, BSD-3). A separate extra, NOT
# part of dev: PyPI only ships prebuilt wheels for Windows, and CI's Linux
# runners must keep installing cleanly. Code paths degrade gracefully
# without it (audio.echo_cancellation defaults off; enabling it without
# the package raises with install instructions). AEC tests skip when it's
# absent.
#
# macOS: the sdist's build system already supports Darwin (meson build of
# the webrtc-audio-processing dylib, -DWEBRTC_MAC flags, ARM64 NEON) --
# verified 2026-07-16 on Apple Silicon. It just needs build tools uv/pip
# won't install for you: `brew install meson ninja swig`, then
# `uv pip install --no-binary aec-audio-processing aec-audio-processing`.
# See docs/KNOWN-ISSUES.md for the full note.
aec = [
    "aec-audio-processing>=1.0",
]
# GPU inference for faster-whisper (stt.device: cuda/auto). ctranslate2's
# Windows wheel bundles cuDNN directly (site-packages/ctranslate2/cudnn64_9.dll)
# but NOT cuBLAS/nvrtc/the CUDA runtime -- without this extra, `stt.device:
# cuda` constructs fine (device selection is separate from library loading)
# but the first real .transcribe() call fails with "Library cublas64_12.dll
# is not found or cannot be loaded" (live-confirmed, 2026-07-20). Installing
# this extra alone is NOT sufficient -- convobox.stt.transcriber's own
# _register_cuda_dll_directories() must also put these packages' bin/
# directories on PATH at import time (live-confirmed both are needed,
# 2026-07-22); see that function's docstring. A separate extra, not part
# of dev/aec: these wheels are large (~1GB) and CUDA-only, no benefit on
# CPU-only machines or CI's Linux runners.
cuda = [
    "nvidia-cublas-cu12>=12.0",
    "nvidia-cuda-nvrtc-cu12>=12.0",
    "nvidia-cuda-runtime-cu12>=12.0",
]
# piper-tts is GPL-3.0 (see DEPENDENCY_LICENSE_AUDIT.md) and deliberately
# NOT in the main dependencies list, so a plain `uv sync`/`pip install .`
# never pulls in GPL-licensed code — only an explicit, separate opt-in
# (`uv sync --extra piper`) does. Kokoro (kokoro-onnx, MIT + Apache-2.0
# model weights) is the default engine.
piper = [
    "piper-tts>=1.2",
]

[project.scripts]
convobox-spike = "scripts.spike:main"
convobox-settings = "scripts.settings_tui:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/convobox"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff.lint.per-file-ignores]
# Every standalone script under scripts/ inserts src/ (and, for a few,
# scripts/ itself) onto sys.path before importing convobox.* -- necessary
# because these run directly (python scripts/foo.py), not through the
# installed package, and each does this deliberately and visibly (see the
# comment at each insert site), not by accident.
"scripts/*.py" = ["E402"]

[[tool.mypy.overrides]]
# faster-whisper, sounddevice, and silero-vad ship no type stubs and no
# py.typed marker -- no stub package exists to install for them (unlike
# PyYAML, whose types-PyYAML stub package is a lint.yml default input).
# Scoped here rather than a blanket --ignore-missing-imports CLI flag so
# every other import stays checked; this is what makes plain `mypy
# src/convobox` (dev-rig's lint.yml invocation, no flags) pass, matching
# what `mypy ... --ignore-missing-imports` already did for the whole tree.
#
# aec_audio_processing and piper/piper.* are a different reason for the
# same fix: both are opt-in extras (`uv sync --extra aec`/`--extra piper`)
# deliberately NOT installed by CI's default lint job (see
# DEPENDENCY_LICENSE_AUDIT.md for why piper-tts specifically must stay
# opt-in, not default -- it's GPL-3.0), so mypy can never resolve them
# there regardless of whether stubs exist upstream.
module = [
    "faster_whisper",
    "faster_whisper.*",
    "sounddevice",
    "silero_vad",
    "silero_vad.*",
    "aec_audio_processing",
    "piper",
    "piper.*",
]
ignore_missing_imports = true

[tool.bandit]
# Test asserts are pytest's own verification mechanism (not a runtime
# invariant that -O could silently strip away), which is why bandit's own
# B101 rule is the wrong lens for tests/ specifically -- CI (dev-rig
# lint.yml) is invoked with source-dirs=src/convobox for exactly this
# reason; this exclude just keeps a local `bandit -r .` from being
# swamped by the same non-finding.
exclude_dirs = ["tests"]
